Pandas head command
